@@ -1,4 +1,4 @@
-#	$NetBSD: list,v 1.8 2007/05/10 23:22:32 dogcow Exp $
+#	$NetBSD: list,v 1.9 2007/07/29 13:59:39 jmmv Exp $
 
 SRCDIRS	bin sbin usr.bin/less usr.bin usr.sbin gnu/usr.bin
 
@@ -20,6 +20,7 @@ PROG	bin/stty
 PROG	bin/sync
 
 PROG	sbin/disklabel
+PROG	sbin/dhclient
 PROG	sbin/fsck
 PROG	sbin/fsck_ffs
 PROG	sbin/ifconfig
@@ -55,7 +56,8 @@ PROG	usr/sbin/dev_mkdb
 # init invokes the shell as -sh
 ARGVLN	sh -sh
 
-SPECIAL	ping	srcdir	distrib/utils/x_ping
+SPECIAL	dhclient	srcdir	distrib/utils/x_dhclient
+SPECIAL	ping		srcdir	distrib/utils/x_ping
 
 LIBS	libhack.o -lbz2 -ledit -lutil -lcurses -ltermcap -lrmt -lcrypt -ll -lm -lz
 
@@ -68,6 +70,7 @@ COPY	${NETBSDSRCDIR}/etc/master.passwd	etc/master.passwd
 COPY	${NETBSDSRCDIR}/etc/netconfig		etc/netconfig
 COPY	${NETBSDSRCDIR}/etc/protocols		etc/protocols
 COPY	${NETBSDSRCDIR}/distrib/common/services		etc/services
+COPY	${NETBSDSRCDIR}/usr.sbin/dhcp/clientscript/dhclient-script	sbin/dhclient-script 555
 
 # and the common installation tools
 COPY	${DESTDIR}/usr/share/misc/termcap	usr/share/misc/termcap
